credit-decision-game/src/components/decision/style.css
.prompt {
  color: white;
  width: 100%;
  margin: 0rem 0 1rem 0;
}

.prompt__section {
  margin: 2rem;
  font-size: 1.9rem;
  line-height: 1.25;
  text-align: center;
}

.prompt__section:first-child {
  margin-top: 0;
}

.prompt__section:last-child {
  margin-bottom: 0;
}

.prompt__section > *:first-child {
  margin-top: 0;
}

.prompt__section > *:last-child {
  margin-bottom: 0;
}

.prompt__title {
  font-weight: 100;
  font-size: 2.5rem;
  text-align: center;
}

.prompt__image {
  display: block;
  margin: 0 auto;
  max-height: 150px;
}

@media (min-width: 500px) {
  .prompt__image {
    max-height: 15vh;
  }
}

.prompt__button {
  font-weight: 700;
  font-size: 1.2rem;
  color: white;
  text-transform: uppercase;
  display: inline-block;
  padding: 0.75rem 2.25rem;
  border: 0.25rem solid white;
  margin: 0.5rem;
  letter-spacing: 0.1rem;
  transition: background-color 0.25s ease;
  cursor: pointer;
  background-color: #2d87d8;
}

.prompt__button:hover {
  background-color: #051a2d;
}

